--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "extract-text-webpack-plugin": "~2.1.2",
     "file-loader": "~0.9.0",
     "js-object-pretty-print": "~0.2.0",
-    "node-sass": "~4.1.1",
+    "node-sass": "^4.9.1",
     "open": "~0.0.5",
     "sass-loader": "~4.1.1",
     "style-loader": "~0.13.1",
